# astrea_py

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.py  flake.nix  justfile  pyproject.toml  remotes.json  requirements.txt  setup.cfg  setup.py
.github/workflows/: github-deploy.yml  release-linux.yaml  release-macos.yaml  release-windows.yaml  release.yaml
examples/: 0.1-symbolic.ipynb  0.2-spectra.ipynb  1.1-rbb_balance_tasitsiomi.ipynb  1.2-rbb_balance_mashonkina.ipynb  2.0-rbf_analytics.ipynb  2.1-rbf_balance_mashonkina.ipynb  2.1-rbf_balance_tasitsiomi_badnell.ipynb  2.2-rbf_balance_mashonkina.ipynb  3.0-cbb_analytics.ipynb  3.1-cbb_balance_regemorter.ipynb  3.2-cbb_balance_mashonkina.ipynb  4.1-cbf_balance_hahn.ipynb  5.0-ct_analytics.ipynb  5.1-ct_balance_arnaud.ipynb  6.1-cbb_thermalization.ipynb  6.2-cbb_ri_thermalization.ipynb  6.3-cbb_ri_rbb_thermalization.ipynb
include/astrea_py/: astrea_py.h
include/astrea_py/calculation/: lte.h  nlte.h
include/astrea_py/cooling/: cooling_rate.h  cooling_rate_approximation.h  heating_rate.h
include/astrea_py/element/: c_i.h  c_ii.h  c_iii.h  fe_i.h  fe_ii.h  fe_iii.h  h_i.h  h_ii.h  mg_i.h  mg_ii.h  mg_iii.h  n_i.h  n_ii.h  o_i.h  o_i_mashonkina.h  o_ii.h  o_ii_mashonkina.h
include/astrea_py/math/: cauchy_lorentz_distribution.h  interp1d_linear.h  interp1d_log10x.h  interp1d_log10xy.h  interp1d_log10y.h  interp1d_nearest.h  maxwell_boltzmann_distribution.h  normal_distribution.h  trapezoid.h  voigt_function.h  voigt_function_tasitsiomi.h  voigt_profile.h
include/astrea_py/optics/: absorption_coefficient.h  doppler_line_width.h  natural_line_width.h  optical_depth.h
include/astrea_py/population/: balance_equation.h  (+2 more)
include/lss_py/: lss_py.h
lss/: __init__.py  calculate_b_factors.py  calculate_populations_lte.py  calculate_populations_nlte.py  calculate_rates_matrix.py  plot_b_factor_electron_number_density.py  plot_b_factor_temperature.py  plot_population.py  plot_population_lte_electron_number_density.py  plot_population_lte_temperature.py  plot_population_nlte_electron_number_density.py  plot_population_nlte_temperature.py  plot_spectrum.py  plot_utils.py  transition.py
patches/astrea/: fe_ii_effective_collision_strength.patch  gj_3470_bourrier.patch  gj_436_fossati.patch  gj_436_fossati_2.patch  hat_p_11_ben_jaffel.patch  hd_189733_fossati.patch  hd_209458_fossati.patch  hd_209458_salz.patch  hd_73583_zhang.patch  hd_85512_muscles.patch  interp1d_linear.patch  kelt_9_fossati.patch  oscillator_strengths_doppler.patch  oscillator_strengths_stark.patch  saha_ionization_equation.patch  sun_linsky.patch  sun_tobiska.patch  wasp_80_salz_fossati.patch
profiles/: linux_x86_64  mac_x86_64  windows_x86_64
src/: astrea_py.cxx  lss_py.cxx
tests/cooling/: test_cooling_rate.py  test_cooling_rate_approximation.py  test_heating_rate.py
tests/element/: test_c_i.py  test_c_ii.py  test_c_iii.py  test_fe_i.py  test_fe_ii.py  test_fe_iii.py  test_h_i.py  test_h_ii.py  test_mg_i.py  test_mg_ii.py  test_mg_iii.py  test_n_i.py  test_n_ii.py  test_o_i.py  test_o_i_mashonkina.py  test_o_ii.py  test_o_ii_mashonkina.py
tests/example/: test_cbb_lte.py  test_example.py
tests/examples/: test_cbb_lte.py  test_cooling.py  test_nlte.py
tests/math/: test_cauchy_lorentz_distribution.py  test_interp1d_linear.py  test_interp1d_log10x.py  test_interp1d_log10xy.py  test_interp1d_log10y.py  test_interp1d_nearest.py  test_maxwell_boltzmann_distribution.py  test_normal_distribution.py  test_trapezoid.py  test_voigt_function.py  test_voigt_function_tasitsiomi.py  test_voigt_profile.py
tests/optics/: test_absorption_coefficient.py  test_doppler_line_width.py  test_natural_line_width.py  test_optical_depth.py
tests/population/: test_balance_equation.py  test_boltzmann_distribution.py  test_saha_ionization_equation.py
tests/spectrum/: test_gj_3470_bourrier.py  test_gj_436_fossati.py  test_gj_436_fossati_2.py  test_hat_p_11_ben_jaffel.py  test_hd_189733_fossati.py  test_hd_209458_fossati.py  test_hd_209458_salz.py  test_hd_73583_zhang.py  test_hd_85512_muscles.py  test_kelt_9_fossati.py  test_sun_linsky.py  test_sun_tobiska.py  test_wasp_80_salz_fossati.py
tests/thermodynamics/: test_cooling_function.py  test_cooling_rate.py  test_cooling_rate_approximation.py  test_heating_rate.py
tests/transition/: test_cd.py  test_cd_regemorter.py  test_ce.py  test_ce_regemorter.py  test_collisional_deexcitation.py  test_collisional_excitation.py  test_collisional_excitation_regemorter.py  test_collisional_ionization copy.py  test_collisional_ionization.py  test_photoexcitation_lorentz.py  test_photoionization.py  test_radiative_recombination.py  test_rd.py  test_re_lorentz.py  test_ri.py  test_spontaneous_emission.py  test_three_body_recombination.py
(+248 files in other folders)
