cmake_minimum_required(VERSION 3.4...3.18)
project(astrea_py)

find_package(astrea)
find_package(boost-array)
find_package(boost-assert)
find_package(boost-config)
find_package(boost-core)
find_package(boost-integer)
find_package(boost-io)
find_package(boost-lambda)
find_package(boost-math)
find_package(boost-mpl)
find_package(boost-preprocessor)
find_package(boost-random)
find_package(boost-static_assert)
find_package(boost-throw_exception)
find_package(boost-tuple)
find_package(boost-type_traits)
find_package(boost-typeof)
find_package(boost-units)
find_package(boost-utility)
find_package(Eigen3)
find_package(fm)
find_package(ni)
find_package(pybind11)

set(BOOST_MATH_STANDALONE 1)
include_directories(${astrea_INCLUDE_DIRS})
include_directories(${boost-array_INCLUDE_DIRS})
include_directories(${boost-assert_INCLUDE_DIRS})
include_directories(${boost-config_INCLUDE_DIRS})
include_directories(${boost-core_INCLUDE_DIRS})
include_directories(${boost-integer_INCLUDE_DIRS})
include_directories(${boost-io_INCLUDE_DIRS})
include_directories(${boost-lambda_INCLUDE_DIRS})
include_directories(${boost-math_INCLUDE_DIRS})
include_directories(${boost-mpl_INCLUDE_DIRS})
include_directories(${boost-preprocessor_INCLUDE_DIRS})
include_directories(${boost-random_INCLUDE_DIRS})
include_directories(${boost-static_assert_INCLUDE_DIRS})
include_directories(${boost-throw_exception_INCLUDE_DIRS})
include_directories(${boost-tuple_INCLUDE_DIRS})
include_directories(${boost-type_traits_INCLUDE_DIRS})
include_directories(${boost-typeof_INCLUDE_DIRS})
include_directories(${boost-units_INCLUDE_DIRS})
include_directories(${boost-utility_INCLUDE_DIRS})
include_directories(${Eigen3_INCLUDE_DIRS})
include_directories(${fm_INCLUDE_DIRS})
include_directories(${ni_INCLUDE_DIRS})

include_directories(include)

pybind11_add_module(astrea src/astrea_py.cxx)