[tool.poetry]
name = "astrea"
version = "0.5.0" # Makefile, setup.cfg
description = ""
authors = ["Artem Shepelin <4.shepelin@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
twine = "^4.0.2"

[build-system]
requires = [
    "setuptools>=33",
    "wheel>=0.30",
    "ninja>=1.7",
    "cmake>=3",
    "conan>=2",
]
build-backend = "setuptools.build_meta"
