[project]
name = "astrea"
version = "0.7.4" # managed
description = "Python bindings for astrea C++ library"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{name = "Artem Shepelin", email = "4.shepelin@gmail.com"}]
keywords = ["physics", "astronomy", "astrophysics", "plasma"]
license = {text = "GPL-3"}
dependencies = [
    "numpy>=1.25.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
