[metadata]
name = astrea
version = 0.2.6
author = Artem Shepelin
author_email = 4.shepelin@gmail.com
description = Python bindings for astrea C++ library
long_description = file: README.md
keywords = physics, astronomy, astrophysics, plasma
license = GPL-3

[options]
zip_safe = False
python_requires = >=3.6